Polish and fix animations
It's been quite a ride, but the general animations flow is completed.
It needs to be cleaned up (promises?), and a bug needs to be fixed
(we should keep 2 off-screen ones, so that the line doesn't simply
disappear when the graveyard one is removed).

--- a/client/scss/graph.scss
+++ b/client/scss/graph.scss
@@ -10,18 +10,6 @@
   line {
     stroke: $blue;
     stroke-width: 4;
-
-    &.retracting {
-      animation-name: 'retract';
-      animation-direction: reverse;
-    }
-
-    &.expanding {
-      animation-name: 'expand';
-      animation-direction: reverse;
-      animation-fill-mode: forwards;
-    }
-
   }
 
   text {
@@ -61,10 +49,12 @@
 @keyframes fadeIn {
     from  {
       transform: scale(0.5, 0.5);
+      transform-origin: 50% 50%;
       opacity: 0.01;
     }
     to {
       transform: scale(1, 1);
+      transform-origin: 50% 50%;
       opacity: 1;
     }
 }
